--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "^4.19.2",
     "ollama": "^0.5.8",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
