--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/styled": "^11.13.0",
     "@heroicons/react": "^2.1.5",
     "@material-tailwind/react": "^2.1.10",
+    "@mui/material": "^6.0.2",
+    "@mui/styled-engine": "^6.0.2",
     "axios": "^1.7.7",
     "concurrently": "^8.2.2",
     "cors": "^2.8.5",
@@ -19,7 +22,8 @@
     "ollama": "^0.5.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
