--- a/chat_electron/package.json
+++ b/chat_electron/package.json
@@ -22,12 +22,15 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "ollama": "^0.5.8",
+    "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^6.26.1"
+    "react-router-dom": "^6.26.1",
+    "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
+    "@types/plist": "^3.0.5",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
