--- a/chat_electron/package.json
+++ b/chat_electron/package.json
@@ -21,6 +21,7 @@
     "concurrently": "^8.2.2",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "mongodb": "^6.8.1",
     "ollama": "^0.5.8",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
