--- a/chat_electron/package.json
+++ b/chat_electron/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^6.0.2",
     "@mui/material": "^6.0.2",
     "@mui/styled-engine": "^6.0.2",
+    "antd": "^5.20.6",
     "axios": "^1.7.7",
     "concurrently": "^8.2.2",
     "cors": "^2.8.5",
